<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ListaRequisicaoActivity">

    <item
        android:id="@+id/menu_nova_requisicao"
        android:orderInCategory="100"
        android:title="@string/label_nova_requisicao"
        />
    <item
        android:id="@+id/menu_sincronizar"
        android:orderInCategory="100"
        android:title="@string/label_sincronizar"
        app:showAsAction="ifRoom" android:icon="@drawable/sign_sync_icon"/>

    <item
        android:id="@+id/menu_configuracoes"
        android:orderInCategory="100"
        android:title="@string/label_configuracoes"
        />

    <item
        android:id="@+id/menu_sair"
        android:orderInCategory="100"
        android:title="@string/label_sair"
       />
    <item
        android:id="@+id/menu_desconectar"
        android:orderInCategory="100"
        android:title="@string/label_desconectar"
        />
</menu>
