<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_configuracoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Configurações"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/label_ordenacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ordenação"
            />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_group_ordenacao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_numero_requisicao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_requisicao"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_data_requisicao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_requisicao"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_nome_paciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_paciente"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_status_requisicao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/situacao_requisicao"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
    </LinearLayout>

</LinearLayout>